Bug 132730 - Assertion if apply Ctrl+Shift+M on group
Summary: Assertion if apply Ctrl+Shift+M on group
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords:
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2020-05-05 17:05 UTC by Regina Henschel
Modified: 2020-05-19 08:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File to reproduce crash (54.49 KB, application/vnd.oasis.opendocument.presentation)
2020-05-05 17:05 UTC, Regina Henschel
Details
VS 2019 Call Stack (4.11 KB, text/plain)
2020-05-05 17:05 UTC, Regina Henschel
Details
bt with debug symbols (9.04 KB, text/plain)
2020-05-05 18:05 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-05-05 17:05:16 UTC
Created attachment 160392 [details]
File to reproduce crash

Open attached file. Click on cloud or sun. That selects a group. Menu Format > Clear direct formatting ==> crash

A productive build does nothing.

If it is not intended, that the command it propagated to the child objects of the group, then the command should be disabled, if the selection is a group.

I have used Version: 7.0.0.0.alpha0+ (x64)
Build ID: e3517eefed2d4767648cb52d4a9863908cadc3d8
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded

Error message:
Unhandled exception at 0x00007FF91250DB8E (ucrtbase.dll) in soffice.bin: Fatal program exit requested. occurred
Comment 1 Regina Henschel 2020-05-05 17:05:55 UTC
Created attachment 160393 [details]
VS 2019 Call Stack
Comment 2 Julien Nabet 2020-05-05 18:05:14 UTC
Created attachment 160397 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + enable-dbgutil, I could reproduce the assertion.
Comment 3 Julien Nabet 2020-05-05 18:14:07 UTC
I tested with LO Debian package 6.4.3 (so no debug), no assertion of course and no crash but no effect.

I gave a try with https://gerrit.libreoffice.org/c/core/+/93512
With this patch the shape becomes green (+ no assertion of course).
Comment 4 Julien Nabet 2020-05-13 15:17:03 UTC
Since no review, I abandoned the patch.
If someone wants to restore it and push it (if the patch is correct of course), no pb.
Comment 5 Commit Notification 2020-05-15 11:09:46 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7709eb11cddc37883d1a2391a1dd83f03f5cfa3

tdf#132730: fix assertion on group

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2020-05-15 11:17:26 UTC
Patch for 6.4 waiting for review on gerrit here:
https://gerrit.libreoffice.org/c/core/+/94271
Comment 7 Commit Notification 2020-05-19 08:05:30 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/3817449c7a59e9dedbf882d401bc3aa85b3b0aab

tdf#132730: fix assertion on group

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.