tdf#132730: fix assertion on group

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=160397

Implement GroupProperties::ClearObjectItem

Change-Id: I967f8bda6e4a4edaccdb4a0bd2150bb2af2c1316
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93512
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit c7709eb11cddc37883d1a2391a1dd83f03f5cfa3)